add project to publish-coverage

--- a/concourse/tasks/publish-coverage.yaml
+++ b/concourse/tasks/publish-coverage.yaml
@@ -19,3 +19,4 @@ run:
   - --metric-path=golang/coverage/percent
   - --package-name=((package_name))
   - --coverage=((coverage_percent))
+  - --project-id=gcp-guest
