Add pipeline to set pipeline

--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -37,3 +37,5 @@ jobs:
     file: guest-test-infra/concourse/pipelines/container-build.yaml
   - set_pipeline: artifact-releaser-autopush
     file: guest-test-infra/concourse/pipelines/artifact-releaser-autopush.yaml
+  - set_pipeline: sap-workload-test
+    file: guest-test-infra/concourse/pipelines/sap-workload-test.yaml
