--- a/concourse/tasks/daisy-build-package-image.yaml
+++ b/concourse/tasks/daisy-build-package-image.yaml
@@ -1,17 +1,13 @@
 platform: linux
 
 image_resource:
-  type: docker-image
+  type: registry-image
   source:
     repository: gcr.io/compute-image-tools/daisy
     tag: release
 
 inputs:
 - name: compute-image-tools
-- name: credentials
-
-params:
-  GOOGLE_APPLICATION_CREDENTIALS: "credentials/credentials.json"
 
 run:
   path: /daisy
