--- a/concourse/tasks/daisy-publish-images.yaml
+++ b/concourse/tasks/daisy-publish-images.yaml
@@ -1,17 +1,12 @@
 platform: linux
 
 image_resource:
-  type: docker-image
+  type: registry-image
   source:
     repository: gcr.io/compute-image-tools/gce_image_publish
-    tag: latest
 
 inputs:
 - name: compute-image-tools
-- name: credentials
-
-params:
-  GOOGLE_APPLICATION_CREDENTIALS: "credentials/credentials.json"
 
 run:
   path: /gce_image_publish
