--- a/concourse/tasks/gcloud-package-operation.yaml
+++ b/concourse/tasks/gcloud-package-operation.yaml
@@ -2,17 +2,13 @@
 platform: linux
 
 image_resource:
-  type: docker-image
+  type: registry-image
   source:
     repository: google/cloud-sdk
     tag: alpine
 
-inputs:
-- name: credentials
-
 # TYPE can be set to be "uploadToUnstable", "uploadToStaging", or "promoteToStaging"
 params:
-  GOOGLE_APPLICATION_CREDENTIALS: "credentials/credentials.json"
   TOPIC: "projects/artifact-releaser-prod/topics/gcp-guest-package-upload-prod"
   TYPE: "uploadToUnstable"
 
@@ -21,5 +17,4 @@ run:
   args:
   - -exc
   - |
-    gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
     gcloud pubsub topics publish $TOPIC --message "{\"type\": \"${TYPE}\", \"request\": {\"bucket\": \"gcp-guest-package-uploads\", \"object\": \"((package_path))\", \"universe\": \"((universe))\", \"repo\": \"((repo))\"}}"
