--- a/concourse/tasks/gcloud-publish-image.yaml
+++ b/concourse/tasks/gcloud-publish-image.yaml
@@ -2,17 +2,13 @@
 platform: linux
 
 image_resource:
-  type: docker-image
+  type: registry-image
   source:
     repository: google/cloud-sdk
     tag: alpine
 
 inputs:
 - name: compute-image-tools
-- name: credentials
-
-params:
-  GOOGLE_APPLICATION_CREDENTIALS: "credentials/credentials.json"
 
 run:
   path: sh
@@ -20,5 +16,4 @@ run:
   - -exc
   - |
     wf=$(sed 's/\"/\\"/g' ./compute-image-tools/daisy_workflows/build-publish/((wf)) | tr -d '\n')
-    gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
     gcloud pubsub topics publish "((topic))" --message "{\"type\": \"ImagePublish\", \"request\": {\"image_name\": \"((image_name))\", \"gcs_image_path\": \"((gcs_image_path))\", \"image_publish_template\": \"${wf}\", \"source_version\": \"((source_version))\", \"publish_version\": \"((publish_version))\", \"release_notes\": \"((release_notes))\"}}"
