--- a/concourse/tasks/image-test.yaml
+++ b/concourse/tasks/image-test.yaml
@@ -1,7 +1,7 @@
 platform: linux
 
 image_resource:
-  type: docker-image
+  type: registry-image
   source:
     repository: gcr.io/compute-image-tools/cloud-image-tests
     tag: latest
