--- a/container_images/daisy-builder/Dockerfile
+++ b/container_images/daisy-builder/Dockerfile
@@ -24,7 +24,8 @@ COPY --from=0 /daisy daisy
 # Daisy image copies this from gcr.io/distroless/base, we copy here.
 COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
-COPY packagebuild .
+# Must be built from root of repo, where packagebuild dir is.
+COPY packagebuild packagebuild
 # Copy this Dockerfile for debugging.
 COPY container_images/daisy-builder/Dockerfile Dockerfile
 COPY container_images/daisy-builder/main.sh main.sh
