--- a/concourse/pipelines/debian-worker-image-build.yaml
+++ b/concourse/pipelines/debian-worker-image-build.yaml
@@ -23,6 +23,13 @@ resources:
     json_key: |
       ((gcs-key.credential))
     regexp: "debian-worker/debian-10-worker-v([0-9]+).tar.gz"
+- name: debian-11-worker-arm64-gcs
+  type: gcs
+  source:
+    bucket: artifact-releaser-prod-rtp
+    json_key: |
+      ((gcs-key.credential))
+    regexp: "debian-worker/debian-11-worker-arm64-v([0-9]+).tar.gz"
 
 jobs:
 # Build jobs
@@ -72,6 +79,52 @@ jobs:
       job: "build-debian-10-worker"
       result_state: "failure"
       start_timestamp: ((.:start-timestamp-ms))
+- name: build-debian-11-worker-arm64
+  plan:
+  - get: compute-image-tools
+  - get: guest-test-infra
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
+  - task: generate-build-id
+    file: guest-test-infra/concourse/tasks/generate-build-id.yaml
+    vars:
+      prefix: "debian-11-worker-arm64"
+  - put: debian-11-worker-arm64-gcs
+    params:
+      file: build-id-dir/debian-11-worker-arm64*
+    get_params:
+      skip_download: "true"
+  - load_var: gcs-url
+    file: debian-11-worker-arm64-gcs/url
+  - task: generate-build-date
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: build-date
+    file: publish-version/version
+  - task: daisy-build-debian-11-worker-arm64
+    file: guest-test-infra/concourse/tasks/daisy-build-images-debian.yaml
+    vars:
+      wf: "debian/debian_11_worker_arm64.wf.json"
+      gcs_url: ((.:gcs-url))
+      google_cloud_repo: "stable"
+      build_date: ((.:build-date))
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "debian-worker-image-build"
+      job: "build-debian-11-worker-arm64"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "debian-worker-image-build"
+      job: "build-debian-11-worker-arm64"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
 # Publish jobs
 - name: publish-to-testing-debian-10-worker
   plan:
@@ -114,6 +167,49 @@ jobs:
     vars:
       pipeline: "debian-worker-image-build"
       job: "publish-to-testing-debian-10-worker"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+- name: publish-to-testing-debian-11-worker-arm64
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
+  - get: debian-11-worker-arm64-gcs
+    passed: [build-debian-11-worker-arm64]
+    trigger: false
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: debian-11-worker-arm64-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-debian-11-worker-arm64
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/debian-worker"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "debian/debian_11_worker_arm64.publish.json"
+      environment: "test"
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "debian-worker-image-build"
+      job: "publish-to-testing-debian-11-worker-arm64"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "debian-worker-image-build"
+      job: "publish-to-testing-debian-11-worker-arm64"
       result_state: "failure"
       start_timestamp: ((.:start-timestamp-ms))
 - name: publish-to-staging-debian-10-worker
@@ -159,6 +255,49 @@ jobs:
       job: "publish-to-staging-debian-10-worker"
       result_state: "failure"
       start_timestamp: ((.:start-timestamp-ms))
+- name: publish-to-staging-debian-11-worker-arm64
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
+  - get: debian-11-worker-arm64-gcs
+    passed: [build-debian-11-worker-arm64]
+    trigger: false
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: debian-11-worker-arm64-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-debian-11-worker-arm64
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/debian-worker"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "debian/debian_11_worker_arm64.publish.json"
+      environment: "staging"
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "debian-worker-image-build"
+      job: "publish-to-staging-debian-11-worker-arm64"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "debian-worker-image-build"
+      job: "publish-to-staging-debian-11-worker-arm64"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
 - name: publish-to-prod-debian-10-worker
   plan:
   - get: guest-test-infra
@@ -202,5 +341,50 @@ jobs:
     vars:
       pipeline: "debian-worker-image-build"
       job: "publish-to-prod-debian-10-worker"
+      result_state: "failure"
+      start_timestamp: ((.:start-timestamp-ms))
+- name: publish-to-prod-debian-11-worker-arm64
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - task: generate-timestamp
+    file: guest-test-infra/concourse/tasks/generate-timestamp.yaml
+  - load_var: start-timestamp-ms
+    file: timestamp/timestamp-ms
+  - get: debian-11-worker-arm64-gcs
+    passed: [publish-to-staging-debian-11-worker-arm64]
+    trigger: false
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: debian-11-worker-arm64-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-debian-11-worker-arm64
+    file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/debian-worker"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "debian/debian_11_worker_arm64.publish.json"
+      release_notes: ""
+      image_name: "debian_11_worker_arm64"
+      topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
+  on_success:
+    task: success
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "debian-worker-image-build"
+      job: "publish-to-prod-debian-11-worker-arm64"
+      result_state: "success"
+      start_timestamp: ((.:start-timestamp-ms))
+  on_failure:
+    task: failure
+    file: guest-test-infra/concourse/tasks/publish-job-result.yaml
+    vars:
+      pipeline: "debian-worker-image-build"
+      job: "publish-to-prod-debian-11-worker-arm64"
       result_state: "failure"
       start_timestamp: ((.:start-timestamp-ms))
