--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -37,5 +37,7 @@ jobs:
     file: rendered/windows-image-build.json
   - set_pipeline: container-build
     file: rendered/container-build.json
+  - set_pipeline: windows-install-media-image-build
+    file: guest-test-infra/concourse/pipelines/windows-install-media-image-build.yaml
   - set_pipeline: artifact-releaser-autopush
     file: guest-test-infra/concourse/pipelines/artifact-releaser-autopush.yaml
