run ARM tests for guest agent based on test image

--- a/concourse/pipelines/guest-package-build.yaml
+++ b/concourse/pipelines/guest-package-build.yaml
@@ -149,40 +149,60 @@ jobs:
           source-image: projects/debian-cloud/global/images/family/debian-9
           dest-image: debian-9-((.:build-id))
           gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent_((.:package-version))-g1_amd64.deb
+          machine-type: e2-medium
+          worker-image: projects/compute-image-tools/global/images/family/debian-10-worker
       - task: build-package-image-debian-10
         file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
         vars:
           source-image: projects/debian-cloud/global/images/family/debian-10
           dest-image: debian-10-((.:build-id))
           gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent_((.:package-version))-g1_amd64.deb
+          machine-type: e2-medium
+          worker-image: projects/compute-image-tools/global/images/family/debian-10-worker
       - task: build-package-image-debian-11
         file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
         vars:
           source-image: projects/debian-cloud/global/images/family/debian-11
           dest-image: debian-11-((.:build-id))
           gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent_((.:package-version))-g1_amd64.deb
+          machine-type: e2-medium
+          worker-image: projects/compute-image-tools/global/images/family/debian-10-worker
+      - task: build-package-image-debian-11-arm64
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/debian-cloud/global/images/family/debian-11-arm64
+          dest-image: debian-11-arm64-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent_((.:package-version))-g1_arm64.deb
+          machine-type: t2a-standard-2
+          worker-image: projects/debian-cloud-testing/global/images/family/debian-11-arm64
       - task: build-package-image-centos-7
         file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
         vars:
           source-image: projects/centos-cloud/global/images/family/centos-7
           dest-image: centos-7-((.:build-id))
           gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent-((.:package-version))-g1.el7.x86_64.rpm
+          machine-type: e2-medium
+          worker-image: projects/compute-image-tools/global/images/family/debian-10-worker
       - task: build-package-image-rhel-7
         file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
         vars:
           source-image: projects/rhel-cloud/global/images/family/rhel-7
           dest-image: rhel-7-((.:build-id))
           gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent-((.:package-version))-g1.el7.x86_64.rpm
+          machine-type: e2-medium
+          worker-image: projects/compute-image-tools/global/images/family/debian-10-worker
       - task: build-package-image-rhel-8
         file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
         vars:
           source-image: projects/rhel-cloud/global/images/family/rhel-8
           dest-image: rhel-8-((.:build-id))
           gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent-((.:package-version))-g1.el8.x86_64.rpm
+          machine-type: e2-medium
+          worker-image: projects/compute-image-tools/global/images/family/debian-10-worker
   - task: guest-agent-image-tests
     file: guest-test-infra/concourse/tasks/image-test-args.yaml
     vars:
-      images: projects/gcp-guest/global/images/debian-9-((.:build-id)),projects/gcp-guest/global/images/debian-10-((.:build-id)),projects/gcp-guest/global/images/debian-11-((.:build-id)),projects/gcp-guest/global/images/centos-7-((.:build-id)),projects/gcp-guest/global/images/rhel-7-((.:build-id)),projects/gcp-guest/global/images/rhel-8-((.:build-id))
+      images: projects/gcp-guest/global/images/debian-9-((.:build-id)),projects/gcp-guest/global/images/debian-10-((.:build-id)),projects/gcp-guest/global/images/debian-11-((.:build-id)),projects/gcp-guest/global/images/debian-11-arm64-((.:build-id)),projects/gcp-guest/global/images/centos-7-((.:build-id)),projects/gcp-guest/global/images/rhel-7-((.:build-id)),projects/gcp-guest/global/images/rhel-8-((.:build-id))
       extra-args: "-exclude=(image)|(disk)|(security)|(oslogin)"
   - in_parallel:
       fail_fast: true
