--- a/concourse/tasks/daisy-build-package-image.yaml
+++ b/concourse/tasks/daisy-build-package-image.yaml
@@ -17,4 +17,6 @@ run:
   - -var:source_image=((source-image))
   - -var:gcs_package_path=((gcs-package-path))
   - -var:dest_image=((dest-image))
+  - -var:machine_type=((machine-type))
+  - -var:worker_image=((worker-image))
   - ./compute-image-tools/daisy_workflows/image_build/install_package/install_package.wf.json
